<resources>
    <string name="app_name">Domicile Project</string>
    <string name="title_activity_login">activity_login</string>
    <!-- Strings used in and xml files -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Log_in">Log in</string>
    <string name="button_log_in">Log In</string>
    <string name="tf_email">Email</string>
    <string name="Address">Copy the new Address</string>
    <string name="tf_pass">Password</string>
    <string name="fpassword">Forgot Your Password?</string>
    <string name="cp">Confirm Password</string>
    <string name="name">Name</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="UA">Enter Your Updated Address</string>
    <string name="save">Save</string>
    <string name="usn">Number and Street</string>
    <string name="sn">Suburb/Town</string>
    <string name="sr">State/Region</string>
    <string name="country">Country</string>
    <string name="pin">Pin</string>
    <string name="locations">Locations which need to be updated</string>
    <string name="deakin"></string>
    <string name="EI_deakin">Deakin University</string>
    <string name="skip">Skip</string>
    <string name="comm">CommonWealth Bank</string>
    <string name="optus">Optus</string>
    <string name="first_fragment_label">first_fragment_label</string>
    <string name="second_fragment_label">second_fragment_label</string>
    <string name="Dandenong_Library">Dandenong Library</string>
    <string name="references">References</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="locations_all">All Locations</string>
    <string name="Educational_institutes">Educational Institutions</string>
    <string name="banks">Banks</string>
    <string name="Telecomms">Telecommunication Companies</string>
    <string name="Tele_optus">Optus</string>
    <string name="Tele_back">Back</string>
    <string name="Tele_logout">Logout</string>
    <string name="GL">Government Locations</string>
    <string name="EC">Electricity Companies</string>
    <string name="Clubs">Clubs</string>
    <string name="Banks_ANZ">ANZ Bank</string>
    <string name="Banks_Comm">CommonWealth Bank</string>
    <string name="Gyms">Gyms</string>
    <string name="TC">Telecommunication Companies</string>
    <string name="LL">Local Libraries</string>
    <string name="CIC">Car Insurance Companies</string>
    <string name="AP">Australia POST</string>
    <string name="HIC">Health Insurance Companies</string>
    <string name="EI">Educational Institutions</string>
    <string name="FU">Federation University of Australia</string>
    <string name="LT">La Trobe University</string>
    <string name="MU">Monash University</string>
    <string name="RU">RMIT University</string>
    <string name="SU">Swinburne University of Technology</string>
    <string name="UD">University of Divinity</string>
    <string name="UM">University of Melbourne</string>
    <string name="VU">Victoria University</string>
</resources>