<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".banks">

    <TextView
        android:id="@+id/Banks_Comm"
        android:layout_width="400dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/FU"
        android:importantForAutofill="no"
        android:text="@string/Banks_Comm"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Banks_ANZ"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Banks_ANZ"
        android:layout_width="398dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/deakin"
        android:importantForAutofill="no"
        android:text="@string/Banks_ANZ"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EI3"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/Banks_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EI3"
        app:layout_constraintEnd_toStartOf="@+id/Banks_logout"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <TextView
        android:id="@+id/Banks_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EI3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <TextView
        android:id="@+id/EI3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banks"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

</androidx.constraintlayout.widget.ConstraintLayout>